# mdb-write-proxy

./: Cargo.toml
examples/: Cargo.toml
examples/concurrent/: main.rs  twitter-write-policies.json
examples/concurrent/results/: latency_per_insert_100us  latency_per_insert_10ms  latency_per_insert_10us  latency_per_insert_1ms  latency_per_insert_1us  total_time.txt
examples/simple/: main.rs
src/: lib.rs  main.rs  twitter-write-policies.json
