[package]
name = "mdb-write-proxy"
version = "0.1.0"
authors = ["Jonathan Guillotte-Blouin <jonathan.guillotte.blouin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "18.1.0"
serde_json = "1.0.50"
sqlparser = "0.5.0"