[package]
name = "mdb-write-proxy-examples"
version = "0.1.0"
authors = ["Jonathan Guillotte-Blouin <jonathan.guillotte.blouin@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
mdb-write-proxy = { path = "../", package="mdb-write-proxy" }
noria = { git = "https://github.com/jonathanGB/noria/", branch = "mysql_common-0.21" }
serde_json = "1.0.52"
tokio = { version = "0.2.20", features = ["rt-threaded", "macros"] }
failure = "0.1.7"

[[bin]]
name = "simple"
path = "simple/main.rs"
doc = false

[[bin]]
name = "concurrent"
path = "concurrent/main.rs"
doc = false